# Thinkremote

./: .gitignore  CMakeLists.txt  README.md  README.rst  go.mod  package.bat
.github/workflows/: document.yaml  remote-dev.yaml  remote-prod.yaml
client/: CMakeLists.txt  README.rst  build.bat
client/cluster/: docker-compose.yaml
client/electron/linux/: main.js
client/electron/window/: main.js
client/linux/electron/: main.js  package.json
client/linux/remote-ui/: GEventLogger.h  main.cpp  remote-ui.pro  remoteui.cpp  remoteui.h  remoteui.ui
client/macos/electron/: package-lock.json
client/remote-app/: CMakeLists.txt
client/remote-app/include/: remote-app-data-channel.h  remote-app-gui.h  remote-app-input.h  remote-app-remote-config.h  remote-app-signalling.h  remote-app-type.h  remote-app.h
client/remote-app/source/: remote-app-data-channel.c  remote-app-gui.c  remote-app-input.c  remote-app-pipeline.c  remote-app-remote-config.c  remote-app-signalling.c  remote-app.c
client/remote-udp/: CMakeLists.txt
client/remote-udp/include/: remote-udp-data-channel.h  remote-udp-gui.h  remote-udp-input.h  remote-udp-pipeline.h  remote-udp-remote-config.h  remote-udp-signalling.h  remote-udp-type.h  remote-udp.h
client/remote-udp/source/: main.c  remote-udp-data-channel.c  remote-udp-gui.c  remote-udp-input.c  remote-udp-pipeline.c  remote-udp-remote-config.c  remote-udp-signalling.c  remote-udp.c
client/remote-webrtc/: CMakeLists.txt
client/remote-webrtc/include/: remote-webrtc-data-channel.h  remote-webrtc-gui.h  remote-webrtc-input.h  remote-webrtc-pipeline.h  remote-webrtc-remote-config.h  remote-webrtc-signalling.h  remote-webrtc-type.h  remote-webrtc.h
client/remote-webrtc/source/: main.c  remote-webrtc-data-channel.c  remote-webrtc-gui.c  remote-webrtc-input.c  remote-webrtc-pipeline.c  remote-webrtc-remote-config.c  remote-webrtc-signalling.c  remote-webrtc.c
client/shared-items/: CMakeLists.txt
client/shared-items/include/: human-interface-opcode.h  message-form.h  module-code.h  platform-selection.h
client/shared-items/source/: message-form.c
client/test/: CMakeLists.txt
client/webapp/: Dockerfile  Dockerfile.development  Program.cs  Startup.cs  remote.csproj
client/webapp/Controllers/: HomeController.cs
client/webapp/Models/: ErrorViewModel.cs  RemoteViewModel.cs  SessionModels.cs
client/webapp/Properties/: launchSettings.json
client/webapp/Views/: _ViewImports.cshtml
client/webapp/Views/Home/: Development.cshtml  Remote.cshtml
client/webapp/Views/Shared/: _Layout.cshtml
client/webapp/wwwroot/css/: dev.css  googleapi.css  loading-icon.css
client/webapp/wwwroot/material-floating-button/src/: mfb.scss
client/webapp/wwwroot/src/: GUI.js  app.js  datachannel.js  enum.js  input.js  quality-track.js  signalling.js  webrtc.js
client/welcome/: CMakeLists.txt  main.c
client/window/: CMakeLists.txt
client/window/app-packetizer/: RemoteApp.aip
client/window/app-packetizer/RemoteApp-cache/: cacheIndex.txt
client/window/app-packetizer/RemoteApp-cache/part3/: output-info.ini
client/window/electron/: main.js  package-lock.json  temp.txt
client/window/remote-app/: CMakeLists.txt
client/window/remote-app/include/: remote-app-pipeline.h  remote-app-signalling.h
client/window/remote-app/source/: main.c  remote-app-data-channel.c  remote-app-gui.c  remote-app-input.c  remote-app-pipeline.c  remote-app-remote-config.c  remote-app-signalling.c  remote-app.c
cluster/: docker-compose.yaml
deployment/: Dockerfile  ThinkmayServer.aip  ThinkmayServer.back.aip  eula.rtf
deployment/ThinkmayServer-cache/: cacheIndex.txt
deployment/virtualDisplay/: IddSampleDriver.cer  (+4 more)
document/: Dockerfile  doxyfile
script/: build.bat  download.bat  package.bat  test.bat
shared-items/: CMakeLists.txt
shared-items/include/: agent-device.h  capture-key.h  constant.h  development.h  device.h  enum.h  environment.h  general-constant.h  global-var.h  handle-key.h  json-handler.h  key-convert.h  module-code.h  opcode.h  overlay-gui.h  qoe.h  remote-config.h  shortcut.h  signalling-message.h  string-manipulate.h  virtual-key.h  win32-server.h
shared-items/source/: agent-device.c  capture-key.c  device.c  environment.c  global-var.c  handle-key.c  json-handler..c  logging.c  overlay-gui.c  remote-config.c  shortcut.c  string-manipulate.c  token-validate.c  win32-server.c
shared-items/window/: capture-key.c  environment.c  handle-key.c  handle-key.h  overlay-gui.c  win32-server.c  win32-server.h
signalling/: Dockerfile  Program.cs  Startup.cs
testing/: CMakeLists.txt
testing/key/: CMakeLists.txt  key.c
testing/repeated-key/: CMakeLists.txt  key.c
worker/: CMakeLists.txt  build.bat
worker/agent/: CMakeLists.txt
worker/agent/include/: agent-child-process.h  agent-device.h  agent-libsoup-server.h  agent-port-forward.h  agent-server.h  agent-session-initializer.h  agent-shell-session.h  agent-socket.h  agent-type.h  agent-win32-server.h
worker/agent/source/: agent-child-process.c  agent-device.c  agent-libsoup-server.c  agent-port-forward.c  agent-server.c  agent-session-initializer.c  agent-shell-session.c  agent-socket.c  agent-win32-server.c  main.c  remote-token
worker/session-core/: CMakeLists.txt
worker/session-core/include/: session-core-data-channel.h  session-core-pipeline.h  session-core-qos.h  session-core-remote-config.h  session-core-signalling.h  session-core-type.h  session-core.h
worker/session-core/source/: main.c  session-core-data-channel.c  session-core-pipeline.c  session-core-qos.c  session-core-remote-config.c  session-core-signalling.c  session-core.c
worker/session-webrtc/: CMakeLists.txt
worker/session-webrtc/include/: session-webrtc-data-channel.h  session-webrtc-pipeline.h  session-webrtc-qos.h  session-webrtc-remote-config.h  session-webrtc-signalling.h  session-webrtc-type.h  session-webrtc.h
worker/session-webrtc/source/: main.c  session-webrtc-data-channel.c  session-webrtc-pipeline.c  session-webrtc-qos.c  session-webrtc-remote-config.c  session-webrtc-signalling.c  session-webrtc.c
(+81 files in other folders)
